<resources>
    <string name="app_name">Assesmen 1 PBB</string>
    <dimen name="horizontal_margin">16dp</dimen>
    <string name="title">Temp Converter</string>
    <string name="label_opsi">Opsi konversi:</string>
    <string name="convertButt">Convert</string>
    <string name="clearButt">Clear</string>
    <string name="hitungButt">Hitung</string>
    <string name="already_empty">Sudah kosong</string>
    <string name="suhu_invalid">Suhu tidak boleh kosong</string>
    <string name="suhuC_x">Hasil: %1$.2f °C</string>
    <string name="suhuF_x">Hasil: %1$.2f °F</string>
    <string name="suhuK_x">Hasil: %1$.2f K</string>
    <string name="lihat_formula">Rumus</string>
    <string name="share">Bagikan</string>
    <string name="rumus_title">Rumus</string>

    <string name="celsius">Celsius</string>
    <string name="fahrenheit">Fahrenheit</string>
    <string name="kelvin">Kelvin</string>

    <string name="judul_CF">Konversi Celsius ke Fahrenheit</string>
    <string name="judul_CK">Konversi Celsius ke Kelvin</string>
    <string name="judul_FC">Konversi Fahrenheit ke Celsius</string>
    <string name="judul_FK">Konversi Fahrenheit ke Kelvin</string>
    <string name="judul_KC">Konversi Kelvin ke Celsius</string>
    <string name="judul_KF">Konversi Kelvin ke Fahrenheit</string>

    <string name="formula_CF">(%1$s°C × 9/5) + 32 = %2$s</string>
    <string name="formula_CK">%1$s°C + 273.15 = %2$s</string>
    <string name="formula_FC">(%1$s°F − 32) × 5/9 = %2$s</string>
    <string name="formula_FK">(%1$s°F − 32) × 5/9 + 273.15 = %2$s</string>
    <string name="formula_KC">%1$sK − 273.15 = %2$s</string>
    <string name="formula_KF">(%1$sK − 273.15) × 9/5 + 32 = %2$s</string>


    <string-array name="opsi_konv">
        <item>Celsius -> Fahrenheit</item>
        <item>Celsius -> Kelvin</item>
        <item>Fahrenheit -> Celsius</item>
        <item>Fahrenheit -> Kelvin</item>
        <item>Kelvin -> Celsius</item>
        <item>Kelvin -> Fahrenheit</item>
    </string-array>

    <string name="label_suhu">Suhu:</string>

    <string name="copyright">Temp Converter adalah aplikasi yang berfungsi untuk menkonversi suatu satuan suhu ke satuan suhu lainnya.
        Satuan suhu yang dapat dikonversikan antara lain Celsius, Fahrenheit, dan Kelvin.
        \n\nAplikasi ini bertujuan untuk memenuhi tugas Assestment 1 Pemrograman untuk Perangkat Bergerak 1.
        Temukan kodenya di https://github.com/Aldan55/Assestment-1-PBB
        \n\nCopyright © 2021 Muhammad Aldan Devaney.\nAll rights reserved.</string>


    <string name="tentang_aplikasi">About</string>

    <string name="bagikan_template">Hai, tahukah kamu konversi suhu %1$s %2$s ke %3$s adalah %4$s </string>

    <string name="belum_ada_data">Belum ada data</string>
    <string name="histori">Histori</string>

</resources>